# compute-api-client

./: README.md  compute_api_client_README.md  config.json  generate.sh  pyproject.toml
.github/workflows/: release.yaml
.openapi-generator/: FILES
compute_api_client/: __init__.py  api_client.py  configuration.py
compute_api_client/api/: __init__.py  algorithms_api.py  backend_api.py  backend_types_api.py  batch_jobs_api.py  batch_runs_api.py  commits_api.py  files_api.py  final_results_api.py  jobs_api.py  languages_api.py  members_api.py  metadata_api.py  permissions_api.py  projects_api.py  reservations_api.py  results_api.py  runs_api.py  runtime_api.py  runtime_types_api.py  teams_api.py  transactions_api.py  users_api.py
compute_api_client/docs/: Algorithm.md  AlgorithmIn.md  AlgorithmsApi.md  Backend.md  BackendApi.md  BackendPatch.md  BackendStatus.md  BackendType.md  BackendTypesApi.md  BackendWithAuthentication.md  BatchJob.md  BatchJobIn.md  BatchJobStatus.md  BatchJobsApi.md  BatchRun.md  BatchRunIn.md  BatchRunsApi.md  BodyReadBackendTypesBackendTypesGet.md  Commit.md  CommitsApi.md  File.md  FileIn.md  FilesApi.md  FinalResult.md  FinalResultIn.md  FinalResultsApi.md  Job.md  JobIn.md  JobLogLine.md  JobLogPage.md  JobPatch.md  JobStatus.md  JobsApi.md  LanguagesApi.md  LogLine.md  LogPage.md  Member.md  MemberIn.md  MembersApi.md  Metadata.md  (+28 more)
compute_api_client/models/: __init__.py  algorithm.py  backend.py  (+63 more)
qi2_shared/: job_logs.py
tests/: conftest.py  test_authentication.py  test_client.py  test_job_logs.py  test_pagination.py  test_utils.py
(+133 files in other folders)
